Commit first results of exp 1

--- a/notebooks/out_of_domain_uncertainty_poor_income/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7f987abd",
+   "id": "23b65c55",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.508840Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9ff4fa67",
+   "id": "21bfc4d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509078Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3802973c",
+   "id": "375ae1dd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509136Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c6ce08c8",
+   "id": "52b12ae6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509254Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "614c637c",
+   "id": "586fc102",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.598557Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f555e35",
+   "id": "b5aeb7cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.766776Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7a45c28",
+   "id": "b4b06377",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.777334Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b53a506",
+   "id": "83986af7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.785281Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3bbc123",
+   "id": "b357e755",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3f0ee328",
+   "id": "1ed868a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:59.998217Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c2f6d5",
+   "id": "1b23948d",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bf23a0b2",
+   "id": "b7d38eb1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.026897Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af98994",
+   "id": "67c71054",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68c9c7c6",
+   "id": "3ad421a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.049775Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "42c21939",
+   "id": "5b5a3c3f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.391474Z",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2ddb5361",
+   "id": "c16158b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.418361Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bca24b3",
+   "id": "8cc4d27e",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bdcec0a4",
+   "id": "239ea656",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.430736Z",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ed9a2b3",
+   "id": "1ab3450f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.446908Z",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dcc5c5be",
+   "id": "67e30f89",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.347609Z",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6ffbbb52",
+   "id": "c2f3c24a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.372599Z",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fbd61fb5",
+   "id": "466e9227",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.426865Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86bc4c59",
+   "id": "058c358c",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ab0927f",
+   "id": "9528bb10",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "83a21dfc",
+   "id": "0c8f398c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.429683Z",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fdfc3903",
+   "id": "dfdafdae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.470539Z",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e044074e",
+   "id": "0b778813",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.789657Z",
@@ -1250,8 +1250,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/21, 11:40:03: Tuning RandomForestClassifier...\n"
+      "2023/10/21, 11:40:03: Tuning RandomForestClassifier...\n",
+      "2023/10/21, 15:17:32: Tuning for RandomForestClassifier is finished [F1 score = 0.7555077141071947, Accuracy = 0.8066333333333334]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-21 15:17:32 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "50bf8f09bb184e748d4e9b7d3ae40d11",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "59c1f5dfc48c467eb69cdc941980a354",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1273,7 +1311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cefe80d",
+   "id": "15e7370e",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1281,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64bc7fa8",
+   "id": "92123978",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1289,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12c7cd5a",
+   "id": "f05d8b9b",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1297,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb6eddb",
+   "id": "eb2fcf9f",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1305,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "130a4d95",
+   "id": "a6fa2c84",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1314,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a9f1e989",
+   "id": "4c014b57",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.794266Z",
