--- a/notebooks/out_of_domain_uncertainty_poor_income/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "09663a66",
+   "id": "47faebf4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.508840Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6a953d54",
+   "id": "c27279f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509078Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9f204507",
+   "id": "af662013",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509136Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83277d33",
+   "id": "4b8bdc88",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.509254Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b25dd31d",
+   "id": "d9a345d6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.598557Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aa51534f",
+   "id": "a9c13edb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.766776Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3cf1f16c",
+   "id": "3c5c44bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.777334Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f0f60018",
+   "id": "397319ff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:58.785281Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5554f3c",
+   "id": "b416ca14",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94fdc77d",
+   "id": "90328c3d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:08:59.998217Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0026bf",
+   "id": "e18209a1",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "96a616e0",
+   "id": "9b1957fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.026897Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d1a1dc6",
+   "id": "769be80e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "59c60492",
+   "id": "8d1f8466",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.049775Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f52c1c18",
+   "id": "4b4ee4c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.391474Z",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b9c06ecd",
+   "id": "cf59a61e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:00.418361Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2ef937a",
+   "id": "44419ec7",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d53f078",
+   "id": "d2b948a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.430736Z",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "126bc7a5",
+   "id": "e789ea5d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:03.446908Z",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b09bd9cb",
+   "id": "9e806d4d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.347609Z",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a545973e",
+   "id": "5e3273b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.372599Z",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d3aa6b06",
+   "id": "9cd6be9e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.426865Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a57825",
+   "id": "5de66892",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a5a4f2",
+   "id": "fb390572",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "669f9684",
+   "id": "e4447669",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.429683Z",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "efff4bc3",
+   "id": "355f3701",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:09:06.470539Z",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "343a9ef3",
+   "id": "8be37c62",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.789657Z",
@@ -1244,8 +1244,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/21, 11:43:07: Tuning RandomForestClassifier...\n"
+      "2023/10/21, 11:43:07: Tuning RandomForestClassifier...\n",
+      "2023/10/21, 15:43:15: Tuning for RandomForestClassifier is finished [F1 score = 0.7552305647584788, Accuracy = 0.8060666666666666]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-21 15:43:15 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "987a4dc29e2d40098f954d3967f9b4a9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "838dcfef98b7478d9493cb8f2c727dd5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1267,7 +1305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b71c3c",
+   "id": "a412685d",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1275,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce94fc9",
+   "id": "238d0cb5",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1283,7 +1321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ad2cf39",
+   "id": "1c220448",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1291,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "305aad4a",
+   "id": "8ccf1264",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1299,7 +1337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b46059f9",
+   "id": "0224cc94",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1308,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba33b822",
+   "id": "6b3d747b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:17:06.794266Z",
