--- a/notebooks/out_of_domain_uncertainty_rich_income_10K/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_10K/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ff118444",
+   "id": "098eb5a1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a16e7f20",
+   "id": "145ef69b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2385bdda",
+   "id": "a1ba6598",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3145e73e",
+   "id": "4a11124f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3de3aad6",
+   "id": "11c30e91",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5121dfda",
+   "id": "84abe023",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.561791Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "971f8a02",
+   "id": "98e7b8e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.569809Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aea0da63",
+   "id": "fd196b6b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.579999Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40733ed8",
+   "id": "f74fa31d",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c139a245",
+   "id": "01ebe80b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:43.760203Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1415dbce",
+   "id": "db43ddca",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "13ba947f",
+   "id": "324a1648",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:43.786131Z",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c518c14",
+   "id": "f87bf132",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "65745be5",
+   "id": "432d20c8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:43.809452Z",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "122011a5",
+   "id": "dc489fe7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:44.166649Z",
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fa2184db",
+   "id": "43f0eeed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:44.193063Z",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e9e953c",
+   "id": "e59e153b",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0b7ced9b",
+   "id": "dd3f09e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:47.270301Z",
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "937ad1f3",
+   "id": "034d3fde",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:47.325807Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "08f38e8c",
+   "id": "f03e46c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.275940Z",
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b16a65f7",
+   "id": "b95ada98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.306407Z",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5120a22c",
+   "id": "0dae677b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.348230Z",
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0012257b",
+   "id": "06512825",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a297e33",
+   "id": "d6905108",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5122802a",
+   "id": "1f39bad6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.350962Z",
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "93e31151",
+   "id": "ad9babd4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.392905Z",
@@ -703,8 +703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "267f1a2d",
+   "execution_count": 17,
+   "id": "5a2a6c96",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.694664Z",
@@ -1252,8 +1252,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/22, 18:41:17: Tuning RandomForestClassifier...\n"
+      "2023/10/22, 18:41:17: Tuning RandomForestClassifier...\n",
+      "2023/10/22, 18:46:07: Tuning for RandomForestClassifier is finished [F1 score = 0.6448662703849747, Accuracy = 0.702970297029703]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-22 18:46:07 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c15cc3758b60427888c874885f57c4ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1af724bbf9444b09f313c57f1f001d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1277,7 +1315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7caabc43",
+   "id": "423ac61e",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1285,7 +1323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53639c44",
+   "id": "ec0154f8",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1293,7 +1331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884423e1",
+   "id": "131a7300",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1301,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50551b0d",
+   "id": "f484dd10",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1309,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef861866",
+   "id": "f371b3b2",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1318,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dbc231bd",
+   "id": "180b1065",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
