Prepared everything for exp 30K

--- a/notebooks/out_of_domain_uncertainty_poor_income_10K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_10K/Income_2018.ipynb
@@ -213,7 +213,6 @@
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.7]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 10_000\n",
-    "SAMPLES_PER_FOLD_FOR_TUNING = TRAIN_SET_SUBSAMPLE_SIZE // 3\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'poor_income_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -728,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'fa8d64fb-e05a-4ac3-aa28-f1c2bd01d261'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'fa8d64fb-e05a-4ac3-aa28-f1c2bd01d261'}\n"
      ]
     },
     {
@@ -1247,8 +1244,7 @@
      "output_type": "stream",
      "text": [
       "2023/10/22, 19:01:14: Tuning RandomForestClassifier...\n",
-      "2023/10/22, 19:05:39: Tuning for RandomForestClassifier is finished [F1 score = 0.5585942030648673, Accuracy = 0.6273627362736274]\n",
-      "\n"
+      "2023/10/22, 19:05:39: Tuning for RandomForestClassifier is finished [F1 score = 0.5585942030648673, Accuracy = 0.6273627362736274]\n"
      ]
     },
     {
@@ -1302,7 +1298,6 @@
     "                                                 # with_tuning=False,\n",
     "                                                 # tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -1360,9 +1355,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.0, 0.7]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': 'fa8d64fb-e05a-4ac3-aa28-f1c2bd01d261'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'fa8d64fb-e05a-4ac3-aa28-f1c2bd01d261'}\n"
      ]
     },
     {
@@ -2413,7 +2406,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2469,7 +2461,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2525,7 +2516,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2581,7 +2571,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2642,7 +2631,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
