--- a/notebooks/out_of_domain_uncertainty_rich_income_10K/Income_2018-Copy1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_10K/Income_2018-Copy1.ipynb
@@ -213,7 +213,6 @@
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.7]\n",
     "TRAIN_SET_SUBSAMPLE_SIZE = 10_000\n",
-    "SAMPLES_PER_FOLD_FOR_TUNING = TRAIN_SET_SUBSAMPLE_SIZE // 3\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -728,9 +727,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '99df3a37-a84e-4824-bbe7-cc25fc0e4bd5'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '99df3a37-a84e-4824-bbe7-cc25fc0e4bd5'}\n"
      ]
     },
     {
@@ -1253,8 +1250,7 @@
      "output_type": "stream",
      "text": [
       "2023/10/22, 18:41:17: Tuning RandomForestClassifier...\n",
-      "2023/10/22, 18:46:07: Tuning for RandomForestClassifier is finished [F1 score = 0.6448662703849747, Accuracy = 0.702970297029703]\n",
-      "\n"
+      "2023/10/22, 18:46:07: Tuning for RandomForestClassifier is finished [F1 score = 0.6448662703849747, Accuracy = 0.702970297029703]\n"
      ]
     },
     {
@@ -1308,7 +1304,6 @@
     "                                                 # with_tuning=False,\n",
     "                                                 # tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -1364,7 +1359,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -1422,9 +1416,7 @@
       " 'experiment_iteration': 'Exp_iter_3',\n",
       " 'fair_intervention_params_lst': '[0.0, 0.7]',\n",
       " 'model_init_seed': 300,\n",
-      " 'session_uuid': '99df3a37-a84e-4824-bbe7-cc25fc0e4bd5'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': '99df3a37-a84e-4824-bbe7-cc25fc0e4bd5'}\n"
      ]
     },
     {
@@ -2475,7 +2467,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2531,7 +2522,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2587,7 +2577,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
@@ -2643,7 +2632,6 @@
     "                                                 with_tuning=False,\n",
     "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
-    "                                                 samples_per_fold=SAMPLES_PER_FOLD_FOR_TUNING,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
    ]
