Saved model tuning results

--- a/notebooks/out_of_domain_uncertainty_rich_income_70K/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_70K/Income_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7783d794",
+   "id": "fa19b502",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6bf1394a",
+   "id": "1f380831",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ad407882",
+   "id": "3f36a263",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fd92d3be",
+   "id": "560de876",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bc794dbb",
+   "id": "4487e4e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14ec9948",
+   "id": "c36095f6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:50.851056Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c30d168d",
+   "id": "9ed7b96a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:50.861815Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e5d68e4",
+   "id": "9174a371",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:50.875370Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "365f7b3b",
+   "id": "f0ced792",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "370149c3",
+   "id": "c03204cb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:52.320797Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "314832b1",
+   "id": "ab404f47",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e2052ac2",
+   "id": "549f192e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:52.359259Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1580be",
+   "id": "bbf41c4c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "be50148b",
+   "id": "4963ad49",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:52.380307Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aa645505",
+   "id": "5663db81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:53.135057Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "db42a985",
+   "id": "d0f60f33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:53.162006Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7c02890",
+   "id": "20db10c3",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "14634116",
+   "id": "5aa0882f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:59.526834Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ddcd2fb0",
+   "id": "64394639",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:27:59.596815Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a7f4b00b",
+   "id": "405aaa08",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:28:03.903214Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1920f78e",
+   "id": "bf553b03",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:28:03.987217Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4fa10efd",
+   "id": "76cf1add",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:28:03.987458Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e42d03",
+   "id": "f9246de1",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d54e03",
+   "id": "2c747c16",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "07fa1295",
+   "id": "e4c3153c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:28:04.024666Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d72531b1",
+   "id": "4153a3b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:28:04.083510Z",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8473a53e",
+   "id": "a846c5a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:31:14.871807Z",
@@ -1245,8 +1245,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/25, 10:44:07: Tuning RandomForestClassifier...\n"
+      "2023/10/25, 10:44:07: Tuning RandomForestClassifier...\n",
+      "2023/10/25, 12:46:53: Tuning for RandomForestClassifier is finished [F1 score = 0.8096786586367765, Accuracy = 0.8097714311468086]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-25 12:46:53 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ea1b14aab414ce58cb80b30e8d599b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "34410df7adfe40049ea47cbb7bda4731",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1269,7 +1307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366da4f1",
+   "id": "e0001ba7",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1278,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "56b0c672",
+   "id": "117a110b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8f1808dc",
+   "id": "de48d5e2",
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19089af1",
+   "id": "4580469c",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2384,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "349a8d0d",
+   "id": "0c7c7d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,7 +2443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cc9996e",
+   "id": "b1b529dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2428,7 +2466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a77e705",
+   "id": "f24aa2fe",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2437,7 +2475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7b04fd",
+   "id": "3c78e681",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2458,7 +2496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e9d72c",
+   "id": "823c98d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d567b78a",
+   "id": "44b65859",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2490,7 +2528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b1fb4e",
+   "id": "47660e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2511,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8526daa3",
+   "id": "d27f720f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2534,7 +2572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a386043",
+   "id": "7d8148cb",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2543,7 +2581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d62aff30",
+   "id": "e1a71f3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2564,7 +2602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f3b61b5",
+   "id": "f8e69759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2588,7 +2626,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a857e293",
+   "id": "f71b83c6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
