--- a/notebooks/out_of_domain_uncertainty_rich_income_70K/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_70K/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1c9f4a6d",
+   "id": "9b96d0a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b2c88a57",
+   "id": "31b67f3a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9eb18aa4",
+   "id": "a1711c4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d60278a9",
+   "id": "e0c73f40",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "774b3f1e",
+   "id": "38b51a84",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cecfc27d",
+   "id": "dc272ed9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "50689537",
+   "id": "f767c362",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e65e7f34",
+   "id": "7242e651",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde91bfd",
+   "id": "63b26613",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "504f718c",
+   "id": "c68e2202",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7ef5f7c",
+   "id": "3e45ca73",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "40d9170b",
+   "id": "3734eea7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31efaaf6",
+   "id": "df7742c9",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "feacc0b8",
+   "id": "a33d9f1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "85605f9d",
+   "id": "39115856",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "760ddf8b",
+   "id": "9f2f421b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70b14eed",
+   "id": "52a85162",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "557b14d0",
+   "id": "6142a843",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "84156bbf",
+   "id": "5d59e947",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ef968145",
+   "id": "ae4c523e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7151f183",
+   "id": "e861e325",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "33c8fc22",
+   "id": "b37dec7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b10c487d",
+   "id": "5c27df01",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9245d46e",
+   "id": "e8a0961d",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c00ba23f",
+   "id": "645e3205",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1505a0a5",
+   "id": "4ee84563",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddf676f9",
+   "id": "8b7fb680",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -1251,8 +1251,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/25, 10:40:00: Tuning RandomForestClassifier...\n"
+      "2023/10/25, 10:40:00: Tuning RandomForestClassifier...\n",
+      "2023/10/25, 12:50:12: Tuning for RandomForestClassifier is finished [F1 score = 0.809901239876468, Accuracy = 0.8099857040042227]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-25 12:50:12 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ddc68ae4331462dac198af1676ed066",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b479b58c87b14810b95a298be793aa28",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1275,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7dd8b71",
+   "id": "a42f5240",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1284,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4e20c7b8",
+   "id": "a087b9d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "21f7e084",
+   "id": "7aac5c6a",
    "metadata": {},
    "outputs": [
     {
@@ -2381,7 +2419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4845ee56",
+   "id": "478052ce",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2390,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "934aa12d",
+   "id": "1c27714e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca2722aa",
+   "id": "09f72c59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2434,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc46f672",
+   "id": "80926019",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2443,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02825862",
+   "id": "b474832d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2464,7 +2502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6547d9a6",
+   "id": "c2bfc466",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2487,7 +2525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabf4f53",
+   "id": "4ab7b09b",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2496,7 +2534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e0f6bb",
+   "id": "6da57a3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2517,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0420e2a2",
+   "id": "83e2e24c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e904139",
+   "id": "d731ef48",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2549,7 +2587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34face55",
+   "id": "85653914",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2570,7 +2608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c28f4015",
+   "id": "81c32d77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2594,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4d09ff1d",
+   "id": "ffa9e5b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
