--- a/notebooks/out_of_domain_uncertainty_poor_income_50K/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_50K/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2e34d95",
+   "id": "460e6a3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "48c621ab",
+   "id": "12eec715",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "936086a8",
+   "id": "8d417d2c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3695b1c",
+   "id": "9eec2b50",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7628f68e",
+   "id": "ba7807dd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1a6f89c",
+   "id": "35cd7069",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9a37eda",
+   "id": "6a1320b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "948ec9dc",
+   "id": "e9d6d091",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "789529c4",
+   "id": "9ce8b296",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a8e7221f",
+   "id": "d563dad4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf48b266",
+   "id": "ba06f1cd",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "674b3f7e",
+   "id": "27f57e4f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acde042e",
+   "id": "3e3673d0",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71dc6c50",
+   "id": "69954491",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "96153e4b",
+   "id": "1a7d39f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e4198e59",
+   "id": "0656658f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -287,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  32f0c940-8892-4b94-8af3-7dbe2e795257\n"
+      "Current session uuid:  24b32f8d-94f4-43da-8e78-5607101fbfae\n"
      ]
     }
    ],
@@ -295,15 +295,15 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    'session_uuid': str(uuid.uuid4()),\n",
-    "    # 'session_uuid': '',\n",
+    "#     'session_uuid': str(uuid.uuid4()),\n",
+    "    'session_uuid': '24b32f8d-94f4-43da-8e78-5607101fbfae',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5cd9247f",
+   "id": "9f550970",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a87247c2",
+   "id": "b101323e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "82a5fbc3",
+   "id": "6c210156",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a2b702f3",
+   "id": "1b9ad66c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ebcc8395",
+   "id": "3d590850",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3d590cc0",
+   "id": "91c2c040",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9ae909c",
+   "id": "94123ddb",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e3e6cd1",
+   "id": "5638a578",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "40b84d0b",
+   "id": "48a4f8b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a5330c37",
+   "id": "77257ec6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "028de2ad",
+   "id": "1c406db6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ecb9eee",
+   "id": "df18aa8b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1318,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b2b00bf8",
+   "id": "651bc7e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c71ea058",
+   "id": "f40c0d93",
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f99710",
+   "id": "66dd120b",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2424,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f89b60a",
+   "id": "d079da61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2445,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d3fcc76",
+   "id": "e86fb5b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2468,7 +2468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c854af67",
+   "id": "2820b379",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcbe749d",
+   "id": "3f2c9e3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2498,7 +2498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18286092",
+   "id": "c5fc176e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b8e74e",
+   "id": "8e11e7f7",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2530,7 +2530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d87e5363",
+   "id": "cd840316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2551,7 +2551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51bb52c0",
+   "id": "845f3c3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2574,7 +2574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0b3675",
+   "id": "0f8c090a",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2583,7 +2583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83e006b7",
+   "id": "2fc0d48a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2604,7 +2604,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2f15ddec",
+   "id": "f1ebf96d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2633,7 +2633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc7aed4f",
+   "id": "b4639efe",
    "metadata": {},
    "outputs": [],
    "source": []
